--- a/.github/workflows/ci-publish-tag.yml
+++ b/.github/workflows/ci-publish-tag.yml
@@ -1,12 +1,11 @@
-name: ci
+name: ci-publish-tag
 
 on:
   push:
-    branches:
-      - master
+#    branches:
+#      - master
     tags:
       - 'v*.*.*'
-  pull_request:
 
 jobs:
   multi-registries:
@@ -21,6 +20,10 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      -
+        name: Get the version
+        id: vars
+        run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -45,3 +48,5 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
             ghcr.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:${{steps.vars.outputs.tag}}
+            ghcr.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:${{steps.vars.outputs.tag}}
