Fix if statement position

--- a/.github/workflows/ci-publish-develop.yml
+++ b/.github/workflows/ci-publish-develop.yml
@@ -8,11 +8,11 @@ on:
 jobs:
   multi-registries:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop'
     steps:
-    if: github.ref == 'refs/heads/develop'Sieht a
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
         with:
           ref: develop
       -
